# PyRoboticAltPhase2

./: README.md  test_ups_i2c.py  typescript
routes/: route.yaml
src/diff_drive_l298n/: package.xml  setup.cfg  setup.py
src/diff_drive_l298n/diff_drive_l298n/: keycontrol.py  motor_node.py  route_executor.py
src/robot_bringup/: package.xml  setup.py
src/robot_bringup/launch/: robot_auto.launch.py  robot_mission.launch.py
src/robot_bringup/robot_bringup/: ld06_node.py  lidar_obstacle_node.py  lidar_safety.py  lidar_test1.py  mission_master.py
src/robot_vision/: package.xml  setup.py
src/robot_vision/launch/: robot_full_mission.launch.py  vision_mission.launch.py
src/robot_vision/robot_vision/: aruco_detector_node.py  camera_capture_node.py  lidar_avoidance_node.py  mission_master_node.py  vision_processor_node.py
src/stream_ros/: package.xml  setup.cfg  setup.py
src/stream_ros/stream_ros/: ros_stream.py
stream_ros/: ros_stream.py
