<?xml version="1.0"?>
<package format="3">
  <name>robot_vision</name>
  <version>0.0.1</version>
  <description>IMX708 camera, ArUco detector, vision processor and mission master</description>

  <maintainer email="artem@example.com">artem</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>